💄 Some Ui fixes / responsiveness

--- a/lollo-port/src/pages/MainPage.module.css
+++ b/lollo-port/src/pages/MainPage.module.css
@@ -7,5 +7,7 @@
 .others {
     width: 100vw;
     height: 100vh;
-    background: url("../assets/backgrounds/othersBackgroundImg.svg");
+    background-size: auto;
+    background-color: #113550;
 }
+
