--- a/lollo-port/src/pages/MainPage/MainPage.module.css
+++ b/lollo-port/src/pages/MainPage/MainPage.module.css
@@ -1,7 +1,7 @@
 .home {
     width: 100vw;
     height: 100vh;
-    background: url("../assets/backgrounds/background-homepage.webp") 200px;
+    background: url("../../assets/backgrounds/background-homepage.webp") 200px;
 }
 
 .others {
